# glfw-architecture

./: CMakeLists.txt  Dependencies.cmake  README.md  reproduce.md
App/: CMakeLists.txt
App/Shaders/: Fragment.glsl  Vertex.glsl
App/Source/: AppLayer.cpp  AppLayer.h  Main.cpp
Core/: CMakeLists.txt
Core/Source/Core/: Application.cpp  Application.h  Layer.h  Window.cpp  Window.h
Core/Source/Core/Renderer/: GLUtils.cpp  GLUtils.h  Shader.cpp  Shader.h
